# sml

./: .htaccess  README.md  _config.yaml  index.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md
_data/: downloads.tsv  minimaal.yaml
_includes/: custom-head.html  def.html  prefixes.html  vocab.html
assets/css/: brand-color.scss
data/: sml2-owl.ttl  sml2-rdfs.ttl  sml2-shacl.ttl  sml2-skos.ttl
data/concat/: nen2660-lov-metadata.ttl  nen2660.json  nen2660.rdf  nen2660.trig  nen2660.ttl  sml-lov-metadata.ttl  sml.json  sml.rdf  sml.trig  sml.ttl
data/examples/: example-enum.ttl  sml-example-data.ttl  sml-example-owl.ttl  sml-example-rdfs.ttl  sml-example-shacl.ttl  sml-example-skos.ttl  sml2-example-owl.ttl
pages/: def.md  downloads.md  endpoint.md  term.md
